Deploying the CEED website with mkdocs, version 1.0.4 from /Users/kolev1/local/brew/lib/python3.6/site-packages/mkdocs (Python 3.6)

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -334,57 +334,58 @@
 <li>
 <p>CEED-proposed high-order <a href="../discr/#efficient-high-order-operator-format-wzxhzdk1">Operator</a> and <a href="../vis/">Visualization</a> formats.</p>
 </li>
-<li>
-<p>CEED-MS1 report: <a href="../docs/ceed-ms1-report.pdf">Engage first wave ECP/CEED apps</a>.
-<a href="https://doi.org/10.5281/zenodo.2542292"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542292.svg" class="doi"></a></p>
-</li>
-<li>
-<p>CEED-MS6 report: <a href="../docs/ceed-ms6-report.pdf">Identify initial kernels, benchmarks and miniapps</a>.
-<a href="https://doi.org/10.5281/zenodo.2542333"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542333.svg" class="doi"></a></p>
-</li>
-<li>
-<p>CEED-MS8 report: <a href="../docs/ceed-ms8-report.pdf">Initial integration of CEED software in ECP apps</a>.
-<a href="https://doi.org/10.5281/zenodo.2542338"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542338.svg" class="doi"></a></p>
-</li>
-<li>
-<p>CEED-MS10 report: <a href="../docs/ceed-ms10-report.pdf">Initial CEED API</a>.
-<a href="https://doi.org/10.5281/zenodo.2542340"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542340.svg" class="doi"></a></p>
-</li>
-<li>
-<p>CEED-MS13 report: <a href="../docs/ceed-ms13-report.pdf">Public release of CEED 1.0</a>.
-<a href="https://doi.org/10.5281/zenodo.2542343"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542343.svg" class="doi"></a></p>
-</li>
-<li>
-<p>CEED-MS18 report: <a href="../docs/ceed-ms18-report.pdf">Propose high-order mesh/data format</a>.
-<a href="https://doi.org/10.5281/zenodo.2542346"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542346.svg" class="doi"></a></p>
-</li>
-<li>
-<p>CEED-MS20 report: <a href="../docs/ceed-ms20-report.pdf">Performance tuning of CEED software and first wave apps</a>.
-<a href="https://doi.org/10.5281/zenodo.2542350"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542350.svg" class="doi"></a></p>
-</li>
-<li>
-<p>CEED-MS23 report: <a href="../docs/ceed-ms23-report.pdf">Engage second wave ECP/CEED applications</a>.
-<a href="https://doi.org/10.5281/zenodo.2542359"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542359.svg" class="doi"></a></p>
-</li>
-<li>
-<p>CEED-MS25 report: <a href="../docs/ceed-ms25-report.pdf">Public release of CEED 2.0</a>.
-<a href="https://doi.org/10.5281/zenodo.2641316"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2641316.svg" class="doi"></a></p>
-</li>
-<li>
-<p>CEED-MS29 report: <a href="../docs/ceed-ms29-report.pdf">Improved Support for Parallel Adaptive Simulation in CEED</a>.
-<a href="https://doi.org/10.5281/zenodo.3336420"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3336420.svg" class="doi"></a></p>
-</li>
-<li>
-<p>CEED-MS32 report: <a href="../docs/ceed-ms32-report.pdf">Performance tuning of CEED software and 1st and 2nd wave apps</a>.
-<a href="https://doi.org/10.5281/zenodo.3477618"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3477618.svg" class="doi"></a></p>
-</li>
+</ul>
+<p><a href="https://doi.org/10.5281/zenodo.2542292"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542292.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS1 report: <a href="../docs/ceed-ms1-report.pdf">Engage first wave ECP/CEED apps</a>.</li>
+</ul>
+<p><a href="https://doi.org/10.5281/zenodo.2542333"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542333.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS6 report: <a href="../docs/ceed-ms6-report.pdf">Identify initial kernels, benchmarks and miniapps</a>.</li>
+</ul>
+<p><a href="https://doi.org/10.5281/zenodo.2542338"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542338.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS8 report: <a href="../docs/ceed-ms8-report.pdf">Initial integration of CEED software in ECP apps</a>.</li>
+</ul>
+<p><a href="https://doi.org/10.5281/zenodo.2542340"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542340.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS10 report: <a href="../docs/ceed-ms10-report.pdf">Initial CEED API</a>.</li>
+</ul>
+<p><a href="https://doi.org/10.5281/zenodo.2542343"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542343.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS13 report: <a href="../docs/ceed-ms13-report.pdf">Public release of CEED 1.0</a>.</li>
+</ul>
+<p><a href="https://doi.org/10.5281/zenodo.2542346"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542346.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS18 report: <a href="../docs/ceed-ms18-report.pdf">Propose high-order mesh/data format</a>.</li>
+</ul>
+<p><a href="https://doi.org/10.5281/zenodo.2542350"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542350.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS20 report: <a href="../docs/ceed-ms20-report.pdf">Performance tuning of CEED software and first wave apps</a>.</li>
+</ul>
+<p><a href="https://doi.org/10.5281/zenodo.2542359"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2542359.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS23 report: <a href="../docs/ceed-ms23-report.pdf">Engage second wave ECP/CEED applications</a>.</li>
+</ul>
+<p><a href="https://doi.org/10.5281/zenodo.2641316"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.2641316.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS25 report: <a href="../docs/ceed-ms25-report.pdf">Public release of CEED 2.0</a>.</li>
+</ul>
+<p><a href="https://doi.org/10.5281/zenodo.3336420"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3336420.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS29 report: <a href="../docs/ceed-ms29-report.pdf">Improved Support for Parallel Adaptive Simulation in CEED</a>.</li>
+</ul>
+<p><a href="https://doi.org/10.5281/zenodo.3477618"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3477618.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS32 report: <a href="../docs/ceed-ms32-report.pdf">Performance tuning of CEED software and 1st and 2nd wave apps</a>.</li>
 </ul>
 <h3 id="publications">Publications</h3>
 <h4 id="2019">2019</h4>
 <ol>
-<li>H. Hajduk, D. Kuzmin, Tz. Kolev and R. Abgrall, <a href="https://eldorado.tu-dortmund.de/bitstream/2003/37961/1/Ergebnisbericht%20Nr.%20598.pdf">Matrix-free subcell residual distribution for Bernstein finite elements: Low-order schemes and FCT</a>, <em>submitted</em>, <strong>2019</strong>.</li>
-<li>V. Dobrev, Tz. Kolev, C. Lee, V. Tomov and P. Vassilevski, <a href="https://arxiv.org/abs/1801.08914">Algebraic Hybridization and Static Condensation with Application to Scalable H(div) Preconditioning</a>, <em>SIAM J. Sci. Comp.</em>, to appear, <strong>2019</strong>.</li>
-<li>J. Ceverny, V. Dobrev, and Tz. Kolev, <a href="http://arxiv.org/abs/1905.04033">Non-Conforming Mesh Refinement For High-Order Finite Elements</a>, <em>SIAM J. Sci. Comp.</em>, to appear, <strong>2019</strong>.</li>
+<li>P. Fischer, M. Min, T. Rathanayake, S. Dutta, Tz. Kolev, V. Dobrev, J.S. Camier, M. Kronbichler, T. Warburton, K. Swirydowicz, and J. Brown, <a href="">Running Faster in HPC Applications</a>,  submitted, <strong>2019</strong>.</li>
+<li>H. Hajduk, D. Kuzmin, Tz. Kolev, and R. Abgrall, <a href="https://www.sciencedirect.com/science/article/pii/S0045782519305432">Matrix-free subcell residual distribution for Bernstein finite elements: Low-order schemes and FCT</a>, <em>Comp. Meth. Appl. Mech. Eng.</em>, in press, <strong>2019</strong>.</li>
+<li>V. A. Dobrev, T. V. Kolev, C. S. Lee, V. Z. Tomov, and P. S. Vassilevski, <a href="https://epubs.siam.org/doi/10.1137/17M1132562">Algebraic Hybridization and Static Condensation with Application to Scalable H(div) Preconditioning</a>, <em>SIAM Journal on Scientific Computing</em>, 41(3):B425–B447, <strong>2019</strong>.</li>
+<li>J. Cerverny, V. Dobrev, and Tz. Kolev, <a href="https://epubs.siam.org/doi/10.1137/18M1193992">Non-Conforming Mesh Refinement For High-Order Finite Elements</a>, <em>SIAM Journal on Scientific Computing</em>, 41(4):C367–C392, <strong>2019</strong>.</li>
 <li>V. Dobrev, P. Knupp, Tz. Kolev, and V. Tomov, <a href="https://link.springer.com/chapter/10.1007/978-3-030-13992-6_16">Towards Simulation-Driven Optimization of High-Order Meshes by the Target-Matrix Optimization Paradigm</a>, Roca X., Loseille A. (eds) <em>27th International Meshing Roundtable. IMR 2018. Lecture Notes in Computational Science and Engineering, vol 127.</em>, pp. 285-302, Springer, <strong>2019</strong>.</li>
 <li>I. Masliah, A. Abdelfattah, A. Haidar, S. Tomov, M. Baboulin, J. Falcou, and J Dongarra, <a href="https://www.sciencedirect.com/science/article/pii/S0167819118301091">Algorithms and optimization techniques for high-performance matrix-matrix multiplications of very small matrices</a>, Parallel Computing, vol. 81, pp. 1-21, <strong>2019</strong>.</li>
 <li>V. Dobrev, P. Knupp, Tz. Kolev, K. Mittal, V. Tomov, <a href="https://epubs.siam.org/doi/abs/10.1137/18M1167206">The Target-Matrix Optimization Paradigm for High-Order Meshes</a>, <em>SIAM J. Sci. Comp.</em>, 41(1), pp. B50–B68, <strong>2019</strong>.</li>
