--- a/pubs/index.html
+++ b/pubs/index.html
@@ -390,17 +390,17 @@
 <li>I. Masliah, A. Abdelfattah, A. Haidar, S. Tomov, M. Baboulin, J. Falcou, and J Dongarra, <a href="https://www.sciencedirect.com/science/article/pii/S0167819118301091">Algorithms and optimization techniques for high-performance matrix-matrix multiplications of very small matrices</a>, Parallel Computing, vol. 81, pp. 1-21, <strong>2019</strong>.</li>
 <li>V. Dobrev, P. Knupp, Tz. Kolev, K. Mittal, V. Tomov, <a href="https://epubs.siam.org/doi/abs/10.1137/18M1167206">The Target-Matrix Optimization Paradigm for High-Order Meshes</a>, <em>SIAM J. Sci. Comp.</em>, 41(1), pp. B50–B68, <strong>2019</strong>.</li>
 <li> J. Martinez, Y. Lan, E. Merzari, M. Min, <a href="https://www.sciencedirect.com/science/article/abs/pii/S0017931019316904">On the use of LES-based turbulent thermal-stress models for rod bundle simulations</a>,<em>Int. J. Heat and Mass Transfer</em>, vol. 142, 118399, <stonr>2019</strong>.</li>
-<li> J. Gong, M. Min, P. Fischer, P. Schlatter, and E. Laure, <a href="https://www.sciencedirect.com/science/article/abs/pii/S0743731518305549">OpenACC acceleration for the Pn-Pn-2 algorithm in Nek5000<\a>, <em>J. Parallel and Distributed Computing<\em>, vol. 132, pp. 69-78, <strong>2019<\strong>.</li>
-<li> L. Lu, M. Nazarov, P. Fischer, <a href= "https://www.sciencedirect.com/science/article/pii/S1631073X1930158X">Nonlinear artificial viscosity for spectral element methods <\a>, <em>Comptes Rendus Mathematique<\em>, vol 357, pp. 646-654, <strong>2019<\strong>.</li>
-<li> K. Mittal, S. Dutta, and P. Fischer, K. Mittal, S. Dutta, and P. Fischer, <a href=https://www.sciencedirect.com/science/article/abs/pii/S0045793018308326">Nonconforming Schwarz-spectral element methods for incompressible flow</a>, <em>Computers and Fluids<\em>, 191, <strong>2019<\strong>.</li>
+<li> J. Gong, M. Min, P. Fischer, P. Schlatter, and E. Laure, <a href="https://www.sciencedirect.com/science/article/abs/pii/S0743731518305549">OpenACC acceleration for the Pn-Pn-2 algorithm in Nek5000</a>, <em>J. Parallel and Distributed Computing<\em>, vol. 132, pp. 69-78, <strong>2019</strong>.</li>
+<li> L. Lu, M. Nazarov, P. Fischer, <a href= "https://www.sciencedirect.com/science/article/pii/S1631073X1930158X">Nonlinear artificial viscosity for spectral element methods </a>, <em>Comptes Rendus Mathematique</em>, vol 357, pp. 646-654, <strong>2019</strong>.</li>
+<li> K. Mittal, S. Dutta, and P. Fischer, K. Mittal, S. Dutta, and P. Fischer, <a href=https://www.sciencedirect.com/science/article/abs/pii/S0045793018308326">Nonconforming Schwarz-spectral element methods for incompressible flow</a>, <em>Computers and Fluids</em>, 191, <strong>2019</strong>.</li>
 <li> 
 P. Bello-Maldonado and P. Fischer, Scalable low-order finite element preconditioners for high-order spectral element Poisson solvers, 
-<em>SIAM J. Scie. Comput.<\em>, to appear in <strong>2019<\strong>.</li>
-<li> S. Patel, P. Fischer, M. Min and A. Tomboulides,<a href="https://link.springer.com/article/10.1007/s10915-018-0876-6">A Characteristic-Based Spectral Element Method for Moving-Domain Problems<\a>, <em>J. Sci. Comput.<\em>, vol 79, pp. 564-592, <strong>2019<\strong>.</li>
-<li> K. Mittal and P. Fischer, <a href="https://link.springer.com/article/10.1007/s10915-018-0812-9">Mesh smoothing for the spectral element method<\a>,
-<em>J. Sci. Comput.<\em>, 78(2), pp. 115201173, <strong>2019<\strong>.</li>
-<li> G.K. Giannakopoulos, C.E. Frouzakis, P. Fischer, A. Tomboulides and K. Boulouchos, <a href="https://link.springer.com/article/10.1007/s10494-019-00067-3">LES of the gas-exchange process inside an internal combustion using a high-order method<\a>, <em>Flow, Turbulence and Combustion<\em>, pp. 1-20,
-<strong>2019<\strong>.</li>
+<em>SIAM J. Scie. Comput.</em>, to appear in <strong>2019</strong>.</li>
+<li> S. Patel, P. Fischer, M. Min and A. Tomboulides,<a href="https://link.springer.com/article/10.1007/s10915-018-0876-6">A Characteristic-Based Spectral Element Method for Moving-Domain Problems<\a>, <em>J. Sci. Comput.<\em>, vol 79, pp. 564-592, <strong>2019</strong>.</li>
+<li> K. Mittal and P. Fischer, <a href="https://link.springer.com/article/10.1007/s10915-018-0812-9">Mesh smoothing for the spectral element method</a>,
+<em>J. Sci. Comput.</em>, 78(2), pp. 115201173, <strong>2019</strong>.</li>
+<li> G.K. Giannakopoulos, C.E. Frouzakis, P. Fischer, A. Tomboulides and K. Boulouchos, <a href="https://link.springer.com/article/10.1007/s10494-019-00067-3">LES of the gas-exchange process inside an internal combustion using a high-order method</a>, <em>Flow, Turbulence and Combustion</em>, pp. 1-20,
+<strong>2019</strong>.</li>
 </ol>
 <hr />
 <h4 id="2018">2018</h4>
