Deploying the CEED website with mkdocs, version 1.0.4 from /Users/kolev1/local/brew/lib/python3.6/site-packages/mkdocs (Python 3.6)

--- a/404.html
+++ b/404.html
@@ -185,6 +185,10 @@
 <li >
     <a href="ceed3am/">_CEED3AM</a>
 </li>
+                                    
+<li >
+    <a href="ceed4am/">_CEED4AM</a>
+</li>
                                 </ul>
                             </li>
                             <li >
