Deploying the CEED website with mkdocs, version 1.0.4 from /Users/kolev1/local/brew/lib/python3.6/site-packages/mkdocs (Python 3.6)

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -384,7 +384,7 @@
 <h3 id="publications">Publications</h3>
 <h4 id="2019">2019</h4>
 <ol>
-<li>P. Fischer, M. Min, T. Rathanayake, S. Dutta, Tz. Kolev, V. Dobrev, J.S. Camier, M. Kronbichler, T. Warburton, K. Swirydowicz, and J. Brown, [Scalability of High-Performance PDE Solvers], <em>Int. J. High Perf. Comput. Appl.</em>, <strong>2020</strong>.</li>
+<li>P. Fischer, M. Min, T. Rathanayake, S. Dutta, Tz. Kolev, V. Dobrev, J.S. Camier, M. Kronbichler, T. Warburton, K. Swirydowicz, and J. Brown, <a href="">Scalability of High-Performance PDE Solvers</a>, <em>Int. J. High Perf. Comput. Appl.</em>, <strong>2020</strong>.</li>
 <li>H. Hajduk, D. Kuzmin, Tz. Kolev, and R. Abgrall, <a href="https://www.sciencedirect.com/science/article/pii/S0045782519305432">Matrix-free subcell residual distribution for Bernstein finite elements: Low-order schemes and FCT</a>, <em>Comp. Meth. Appl. Mech. Eng.</em>, <em>in press</em>, <strong>2019</strong>.</li>
 <li>P. Bello-Maldonado and P. Fischer, Scalable low-order finite element preconditioners for high-order spectral element Poisson solvers, <em>SIAM J. Sci. Comp.</em>, <em>to appear</em>, <strong>2019</strong>.</li>
 <li>V. A. Dobrev, T. V. Kolev, C. S. Lee, V. Z. Tomov, and P. S. Vassilevski, <a href="https://epubs.siam.org/doi/10.1137/17M1132562">Algebraic Hybridization and Static Condensation with Application to Scalable H(div) Preconditioning</a>, <em>SIAM Journal on Scientific Computing</em>, 41(3):B425–B447, <strong>2019</strong>.</li>
