Deploying the CEED website with mkdocs, version 1.1 from /Users/kolev1/Library/Python/3.6/lib/python/site-packages/mkdocs (Python 3.6)

--- a/about/index.html
+++ b/about/index.html
@@ -366,7 +366,7 @@ in support of the nation’s <a href="https://obamawhitehouse.archives.gov/the-p
 <li><a href="https://github.com/thilinarmtb">Thilina Ratnayake</a></li>
 <li><a href="http://tcew.github.io/">Tim Warburton</a></li>
 <li><a href="http://people.llnl.gov/kolev1">Tzanio Kolev</a> &mdash; Director of CEED</li>
-<li><a href="https://csel.cs.colorado.edu/~vaba3353/">Valeria Barra</a></li>
+<li><a href="https://csel-web.cs.colorado.edu/~vaba3353/">Valeria Barra</a></li>
 <li><a href="https://people.llnl.gov/dobrev1">Veselin Dobrev</a> &mdash; Lead for the <a href="../fe/">Finite Element</a> thrust</li>
 <li><a href="https://people.llnl.gov/tomov2">Vladimir Tomov</a></li>
 <li><a href="https://people.llnl.gov/dudouit1">Yohann Dudouit</a></li>
