Deploying the CEED website with mkdocs, version 1.1 from /Users/dobrev1/local/lib/python/site-packages/mkdocs (Python 3.7)

--- a/bps/index.html
+++ b/bps/index.html
@@ -332,7 +332,7 @@ codes.</p>
 <h3 id="short-summary">Short Summary</h3>
 <p>This section is a just a quick reference using the notation from the
 <a href="#terminology-and-notation">Terminology and Notation</a> section below (cf.
-libCEED <a href="https://github.com/CEED/libCEED/blob/master/doc/libCEEDapi.md">documentation</a>).</p>
+libCEED <a href="https://libceed.readthedocs.io/en/latest/libCEEDapi/">documentation</a>).</p>
 <p>For more details and software, see the follow-on sections.</p>
 <h5 id="bake-off-problems-bps">Bake-off Problems (BPs)</h5>
 <ul>
