Deploying the CEED website with mkdocs, version 1.1 from /Users/kolev1/local/brew/lib/python3.7/site-packages/mkdocs (Python 3.7)

--- a/ceed-code/index.html
+++ b/ceed-code/index.html
@@ -337,7 +337,7 @@ can also be used as the foundation for an efficient high-order <a href="../discr
 format</a>.</p>
 <p>For more information of the CEED low level API see the <a href="../libceed/">libCEED</a> page.</p>
 <h3 id="high-level-api">High level API</h3>
-<p>At a higher level of abstraction, CEED provideas a high-level API to applications through the <a href="../mfem/">MFEM</a> and <a href="../nek/">Nek</a> codes.</p>
+<p>At a higher level of abstraction, CEED provides a high-level API to applications through the <a href="../mfem/">MFEM</a> and <a href="../nek/">Nek</a> codes.</p>
 <p>The CEED high-level API operates with global discretization concepts,
 specifying a global mesh, finite element spaces and PDE operators to be
 discretized with the point-wise physics representing the coefficients in these
