Deploying the CEED website with mkdocs, version 1.0.4 from /home/valeria/.local/lib/python3.6/site-packages/mkdocs (Python 3.6)

--- a/about/index.html
+++ b/about/index.html
@@ -356,6 +356,7 @@ in support of the nation’s <a href="https://obamawhitehouse.archives.gov/the-p
 <li><a href="http://faculty.rpi.edu/node/35899">Mark Shephard</a></li>
 <li><a href="http://www.mcs.anl.gov/person/matthew-otten">Matt Otten</a></li>
 <li><a href="http://www.mcs.anl.gov/~mmin">Misun Min</a> &mdash; Lead for the <a href="../ap/">Applications</a> thrust</li>
+<li><a href="https://nbeams.github.io/">Natalie Beams</a></li>
 <li><a href="https://people.llnl.gov/vassilevski1">Panayot Vassilevski</a></li>
 <li><a href="http://fischerp.cs.illinois.edu/research.html">Paul Fischer</a> &mdash; Deputy Director of CEED</li>
 <li><a href="http://belloma2.web.engr.illinois.edu/">Pedro Bello-Maldonado</a></li>
