--- a/pubs/index.html
+++ b/pubs/index.html
@@ -383,6 +383,10 @@
 <ul>
 <li>CEED-MS32 report: <a href="../docs/ceed-ms32-report.pdf">Performance tuning of CEED software and 1st and 2nd wave apps</a>.</li>
 </ul>
+<p><a href="https://doi.org/10.5281/zenodo.3860804"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3860804.svg" class="doi"></a></p>
+<ul>
+<li>CEED-MS34 report: <a href="../docs/ceed-ms34-report.pdf">Improve performance and capabilities of CEED-enabled ECP applications on Summit/Sierra</a>.</li>
+</ul>
 <h3 id="publications">Publications</h3>
 <h4 id="2019">2019</h4>
 <ol>
