Deploying the CEED website with mkdocs, version 1.1 from /Users/kolev1/local/brew/lib/python3.7/site-packages/mkdocs (Python 3.7)

--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@ The CEED software will also include optimized assembly support for low-order met
 <div class="bs-sidebar hidden-print well" role="complementary">
     <ul class="nav bs-sidenav">
     <li class="main"><a href="../news/">What's New?</a> </li>
+       <li> <a href="./news/#mfem-video-posted-to-youtube">&#9658;&nbsp;MFEM video posted</a></li>
        <li> <a href="./news/#software-release-ceed-v30">&#9658;&nbsp;CEED v3.0 released</a> </li>
        <li> <a href="./news/#software-release-remhos-v10">&#9658;&nbsp;Remhos v1.0 released</a> </li>
        <li> <a href="./news/#software-release-libceed-v06">&#9658;&nbsp;libCEED v0.6 released</a> </li>
@@ -366,7 +367,6 @@ The CEED software will also include optimized assembly support for low-order met
        <li> <a href="./news/#software-release-mfem-v41">&#9658;&nbsp;MFEM v4.1 released</a> </li>
        <li> <a href="./news/#third-ceed-annual-meeting-in-virginia-tech">&#9658;&nbsp;CEED annual meeting</a> </li>
        <li> <a href="./news/#laghos-cts-2-benchmark">&#9658;&nbsp;Laghos-CTS2 benchmark</a> </li>
-       <li> <a href="http://ceed.exascaleproject.org/fms/">&#9658;&nbsp;FMS v0.1 released</a> </li>
        <li> <a href="../news/">More updates...</a> </li>
     <hr style="background-color:white; height:20px; margin-left:-1px;  margin-right:-1px; margin-top:15px; margin-bottom:10px " />
     <li class="main" style="padding:0"><a href="https://exascaleproject.org/exascale-computing-project/">ECP Co-Design</a> </li>
