Deploying the CEED website with mkdocs, version 1.1 from /Users/kolev1/local/brew/lib/python3.7/site-packages/mkdocs (Python 3.7)

--- a/ceed4am/index.html
+++ b/ceed4am/index.html
@@ -339,7 +339,7 @@
 <p><img alt="CEED Logo" src="../img/logo-150.png" /></p>
 <h3 id="overview">Overview</h3>
 <p>CEED will hold its fourth annual meeting August 11-12, 2020 virtually using ECP
-Zoom for videoconferencing and Slack for small group discussions. The goal of
+Zoom for videoconferencing and Slack for side discussions. The goal of
 the meeting is to report on the progress in the center, deepen existing and
 establish new connections with ECP hardware vendors, ECP software technologies
 projects and other collaborators, plan project activities and brainstorm/work as
