Deploying the CEED website with mkdocs, version 1.0.4 from /Users/kolev1/Library/Python/2.7/lib/python/site-packages/mkdocs (Python 2.7)

--- a/ceed4am/index.html
+++ b/ceed4am/index.html
@@ -428,27 +428,33 @@ Side discussions and breakout sessions will be on the meeting <a href="https://c
 <td><em>TBD</em></td>
 </tr>
 <tr>
-<td>10:00-10:30</td>
-<td>1:00-1:30</td>
+<td>10:00-10:20</td>
+<td>1:00-1:20</td>
 <td><strong>Applications Thrust</strong> <br> Misun Min (ANL)</td>
 <td><em>Paul Fischer</em></td>
 </tr>
 <tr>
-<td>10:30-11:00</td>
-<td>1:30-2:00</td>
-<td><strong>ExaSMR</strong> <br> Elia Merzari (PSU)</td>
+<td>10:20-10:45</td>
+<td>1:20-1:45</td>
+<td><strong>ExaSMR Update</strong> <br> Elia Merzari (PSU)</td>
 <td><em>Misun Min</em></td>
 </tr>
 <tr>
-<td>11:00-11:30</td>
-<td>2:00-2:30</td>
-<td><strong>GPU Acceleration of Blast: A High-Order Hydrodynamics Code</strong> <br> Arturo Vargas (LLNL)</td>
+<td>10:45-11:10</td>
+<td>1:45-2:10</td>
+<td><strong>MARBL: GPU Acceleration of Blast, a High-Order Hydrodynamics Code</strong> <br> Arturo Vargas (LLNL)</td>
 <td><em>Misun Min</em></td>
 </tr>
 <tr>
-<td>11:30-12:00</td>
-<td>2:30-3:00</td>
+<td>11:10-11:35</td>
+<td>2:10-2:35</td>
 <td><strong>E3SM: Performance of spectral element dycore on Summit at scale</strong> <br> Mark Taylor (SNL)</td>
+<td><em>Misun Min</em></td>
+</tr>
+<tr>
+<td>11:35-12:00</td>
+<td>2:35-3:00</td>
+<td><strong>ExaAM: ExaConstit Update</strong> - Robert Carson (LLNL)</td>
 <td><em>Misun Min</em></td>
 </tr>
 <tr>
@@ -466,7 +472,7 @@ Side discussions and breakout sessions will be on the meeting <a href="https://c
 <tr>
 <td>12:30-2:30</td>
 <td>3:30-5:30</td>
-<td><strong>Recorder Talks + Posters</strong> <br> <!-- • *ExaConstit* - Robert Carson (LLNL) <br> --> • <em>Recent Developments in the Omega_h Unstructured Mesh Adaptation Library</em> - Cameron Smith (RPI) <br> • <em>Inline Vector Compression for Computational Physics</em> - Freddie Witherden (TAMU) <br> • <em>Spectral mesh-free quadrature for regions with rational parametric boundaries</em> - David Gunderman (LLNL)</td>
+<td><strong>Recorder Talks + Posters</strong> <br> • <em>Recent Developments in the Omega_h Unstructured Mesh Adaptation Library</em> - Cameron Smith (RPI) <br> • <em>Inline Vector Compression for Computational Physics</em> - Freddie Witherden (TAMU) <br> • <em>Spectral mesh-free quadrature for regions with rational parametric boundaries</em> - David Gunderman (LLNL)</td>
 <td><em>TBD</em></td>
 </tr>
 <tr>
