Deploying the CEED website with mkdocs, version 1.0.4 from /Users/kolev1/Library/Python/2.7/lib/python/site-packages/mkdocs (Python 2.7)

--- a/ceed4am/index.html
+++ b/ceed4am/index.html
@@ -425,7 +425,7 @@ Side discussions and breakout sessions will be on the meeting <a href="https://c
 <td>9:30-10:00</td>
 <td>12:30-1:00</td>
 <td><strong>Break</strong> <br> • side discussions on Slack <br> • propose breakout topics <br> • discuss pre-recorded posters + talks</td>
-<td><em>TBD</em></td>
+<td><em>Tzanio Kolev</em></td>
 </tr>
 <tr>
 <td>10:00-10:20</td>
@@ -461,19 +461,19 @@ Side discussions and breakout sessions will be on the meeting <a href="https://c
 <td>12:00-12:30</td>
 <td>3:00-3:30</td>
 <td><strong>Break</strong> <br> • side discussions on Slack</td>
-<td><em>TBD</em></td>
+<td><em>Paul Fischer</em></td>
 </tr>
 <tr>
 <td>12:30-2:30</td>
 <td>3:30-5:30</td>
 <td><strong>Technical Discussions</strong> <br> • new BPs <br> • solvers, meshing, visualization, ...</td>
-<td><em>TBD</em></td>
+<td><em>Tzanio Kolev</em></td>
 </tr>
 <tr>
 <td>12:30-2:30</td>
 <td>3:30-5:30</td>
-<td><strong>Recorder Talks + Posters</strong> <br> • <em>Recent Developments in the Omega_h Unstructured Mesh Adaptation Library</em> - Cameron Smith (RPI) <br> • <em>Inline Vector Compression for Computational Physics</em> - Freddie Witherden (TAMU) <br> • <em>Spectral mesh-free quadrature for regions with rational parametric boundaries</em> - David Gunderman (LLNL)</td>
-<td><em>TBD</em></td>
+<td><strong>Recorded Talks + Posters</strong> <br> • <em>Progress in RF wave simulation for fusion plasmas using MFEM</em> - Syun'ichi Shiraiwa (PPPL) <br> • <em>Coupling MFEM with the Ginkgo backend for efficient numerics on GPUs</em> - Natalie Beams (UTK) <br> • <em>Recent Developments in the Omega_h Unstructured Mesh Adaptation Library</em> - Cameron Smith (RPI) <br> • <em>Inline Vector Compression for Computational Physics</em> - Freddie Witherden (TAMU) <br> • <em>Spectral mesh-free quadrature for regions with rational parametric boundaries</em> - David Gunderman (LLNL)</td>
+<td><em>Tim Warburton</em></td>
 </tr>
 <tr>
 <td>2:30-3:00</td>
@@ -504,25 +504,25 @@ Side discussions and breakout sessions will be on the meeting <a href="https://c
 <td>8:00-8:30</td>
 <td>11:00-11:30</td>
 <td><strong>Curved conforming mesh adaptation</strong> <br> Mark Shephard (RPI)</td>
-<td><em>TBD</em></td>
+<td><em>Veselin Dobrev</em></td>
 </tr>
 <tr>
 <td>8:30-9:00</td>
 <td>11:30-12:00</td>
 <td><strong>Increasing GPU enhancements in hypre’s BoomerAMG</strong> <br> Ruipeng Li (LLNL)</td>
-<td><em>TBD</em></td>
+<td><em>Veselin Dobrev</em></td>
 </tr>
 <tr>
 <td>9:00-9:30</td>
 <td>12:00-12:30</td>
 <td><strong>One reduce GMRES with two Stage Gauss Seidel AMG smoother: Scaling to new heights on Summit</strong> <br> Kasia Swirydowicz and Stephen Thomas (NREL)</td>
-<td><em>TBD</em></td>
+<td><em>Veselin Dobrev</em></td>
 </tr>
 <tr>
 <td>9:30-10:00</td>
 <td>12:30-1:00</td>
 <td><strong>Break</strong> <br> • side discussions on Slack <br> • propose breakout topics <br> • discuss pre-recorded posters + talks</td>
-<td><em>TBD</em></td>
+<td><em>Tzanio Kolev</em></td>
 </tr>
 <tr>
 <td>10:00-10:30</td>
@@ -552,19 +552,19 @@ Side discussions and breakout sessions will be on the meeting <a href="https://c
 <td>12:00-12:30</td>
 <td>3:00-3:30</td>
 <td><strong>Break</strong> <br> • side discussions on Slack <br> • discuss pre-recorded posters + talks</td>
-<td><em>TBD</em></td>
+<td><em>Tzanio Kolev</em></td>
 </tr>
 <tr>
 <td>12:30-2:30</td>
 <td>3:30-5:30</td>
 <td><strong>Technical Discussions</strong> <br> • new BPs <br> • solvers, meshing, visualization, ...</td>
-<td><em>TBD</em></td>
+<td><em>Tzanio Kolev</em></td>
 </tr>
 <tr>
 <td>12:30-2:30</td>
 <td>3:30-5:30</td>
 <td><strong>Tutorials/ Q&amp;A Sessions</strong> <br> • <em>libCEED</em> - Valeria Barra (CU Boulder)</td>
-<td><em>TBD</em></td>
+<td><em>Tim Warburton</em></td>
 </tr>
 <tr>
 <td>2:30-3:00</td>
