Deploying the CEED website with mkdocs, version 1.0.4 from /Users/kolev1/Library/Python/2.7/lib/python/site-packages/mkdocs (Python 2.7)

--- a/ceed4am/index.html
+++ b/ceed4am/index.html
@@ -472,7 +472,7 @@ Side discussions and breakout sessions will be on the meeting <a href="https://c
 <tr>
 <td>12:30-2:30</td>
 <td>3:30-5:30</td>
-<td><strong>Recorded Talks + Posters</strong> <br> • <em>Progress in RF wave simulation for fusion plasmas using MFEM</em> - Syun'ichi Shiraiwa (PPPL) <br> • <em>Coupling MFEM with the Ginkgo backend for efficient numerics on GPUs</em> - Natalie Beams (UTK) <br> • <em>Recent Developments in the Omega_h Unstructured Mesh Adaptation Library</em> - Cameron Smith (RPI) <br> • <em>Inline Vector Compression for Computational Physics</em> - Freddie Witherden (TAMU) <br> • <em>Spectral mesh-free quadrature for regions with rational parametric boundaries</em> - David Gunderman (LLNL)</td>
+<td><strong>Recorded Talks + Posters</strong> <br>1. <em>Progress in RF wave simulation for fusion plasmas using MFEM</em> - Syun'ichi Shiraiwa (PPPL) <br>2. <em>Coupling MFEM with the Ginkgo backend for efficient numerics on GPUs</em> - Natalie Beams (UTK) <br>3. <em>Recent Developments in the Omega_h Unstructured Mesh Adaptation Library</em> - Cameron Smith (RPI) <br>4. <em>Inline Vector Compression for Computational Physics</em> - Freddie Witherden (TAMU) <br>5. <em>Spectral mesh-free quadrature for regions with rational parametric boundaries</em> - David Gunderman (LLNL)</td>
 <td><em>Tim Warburton</em></td>
 </tr>
 <tr>
@@ -497,26 +497,26 @@ Side discussions and breakout sessions will be on the meeting <a href="https://c
 <tr>
 <td>7:30-8:00</td>
 <td>10:30-11:00</td>
-<td><strong>Software Thrust &amp; libCEED Update</strong> <br> Jed Brown (CU Boulder)</td>
+<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stanmire Tomov (UTK)</td>
 <td><em>Tzanio Kolev</em></td>
 </tr>
 <tr>
 <td>8:00-8:30</td>
 <td>11:00-11:30</td>
-<td><strong>Curved conforming mesh adaptation</strong> <br> Mark Shephard (RPI)</td>
-<td><em>Veselin Dobrev</em></td>
+<td><strong>Achieving Performance Portability in Blast with LLNL Tools: Profiling, Kernel Abstractions, Memory Pools, and More</strong> <br> Tom Stitt (LLNL)</td>
+<td><em>Stan Tomov</em></td>
 </tr>
 <tr>
 <td>8:30-9:00</td>
 <td>11:30-12:00</td>
-<td><strong>Increasing GPU enhancements in hypre’s BoomerAMG</strong> <br> Ruipeng Li (LLNL)</td>
-<td><em>Veselin Dobrev</em></td>
+<td><strong>Software Thrust &amp; libCEED Update</strong> <br> Jed Brown (CU Boulder)</td>
+<td><em>Stan Tomov</em></td>
 </tr>
 <tr>
 <td>9:00-9:30</td>
 <td>12:00-12:30</td>
-<td><strong>One reduce GMRES with two Stage Gauss Seidel AMG smoother: Scaling to new heights on Summit</strong> <br> Kasia Swirydowicz and Stephen Thomas (NREL)</td>
-<td><em>Veselin Dobrev</em></td>
+<td><strong>Curved conforming mesh adaptation</strong> <br> Mark Shephard (RPI)</td>
+<td><em>Stan Tomov</em></td>
 </tr>
 <tr>
 <td>9:30-10:00</td>
@@ -527,26 +527,26 @@ Side discussions and breakout sessions will be on the meeting <a href="https://c
 <tr>
 <td>10:00-10:30</td>
 <td>1:00-1:30</td>
-<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stanmire Tomov (UTK)</td>
-<td><em>Tzanio Kolev</em></td>
+<td><strong>Increasing GPU enhancements in hypre’s BoomerAMG</strong> <br> Ruipeng Li (LLNL)</td>
+<td><em>Veselin Dobrev</em></td>
 </tr>
 <tr>
 <td>10:30-11:00</td>
 <td>1:30-2:00</td>
-<td><strong>Achieving Performance Portability in Blast with LLNL Tools: Profiling, Kernel Abstractions, Memory Pools, and More</strong> <br> Tom Stitt (LLNL)</td>
-<td><em>Stan Tomov</em></td>
+<td><strong>One reduce GMRES with two Stage Gauss Seidel AMG smoother: Scaling to new heights on Summit</strong> <br> Kasia Swirydowicz and Stephen Thomas (NREL)</td>
+<td><em>Veselin Dobrev</em></td>
 </tr>
 <tr>
 <td>11:00-11:30</td>
 <td>2:00-2:30</td>
 <td><strong>Devil Ray: Native High-Order Ray Tracing</strong> <br> Matt Larsen (LLNL)</td>
-<td><em>Stan Tomov</em></td>
+<td><em>Veselin Dobrev</em></td>
 </tr>
 <tr>
 <td>11:30-12:00</td>
 <td>2:30-3:00</td>
 <td><strong>SUNDIALS: New features and capabilities</strong> <br> David Gardner (LLNL)</td>
-<td><em>Stan Tomov</em></td>
+<td><em>Veselin Dobrev</em></td>
 </tr>
 <tr>
 <td>12:00-12:30</td>
@@ -563,7 +563,7 @@ Side discussions and breakout sessions will be on the meeting <a href="https://c
 <tr>
 <td>12:30-2:30</td>
 <td>3:30-5:30</td>
-<td><strong>Tutorials/ Q&amp;A Sessions</strong> <br> • <em>libCEED</em> - Valeria Barra (CU Boulder)</td>
+<td><strong>Tutorials / Q&amp;A Sessions</strong> <br> • <em>libCEED</em> - Valeria Barra (CU Boulder)</td>
 <td><em>Tim Warburton</em></td>
 </tr>
 <tr>
